# mic-checker

./: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/: launch.json  settings.json
src/app/: layout.tsx  page.tsx
src/app/api/analyze/: route.ts
src/app/api/reverse-search/: route.ts
src/components/: AnalysisResult.tsx  ImageUploader.tsx
vst-plugin/: CMakeLists.txt
vst-plugin/Source/: FilterSection.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-plugin/Source/Compressors/: CompressorBase.h  DistressorCompressor.cpp  DistressorCompressor.h  Fairchild670.cpp  Fairchild670.h  LA2ACompressor.cpp  LA2ACompressor.h  LA4Compressor.cpp  LA4Compressor.h  SSLOverdrive.cpp  SSLOverdrive.h  Spanky1176.cpp  Spanky1176.h  VSC3Compressor.cpp  VSC3Compressor.h
